crates/antlr-rust-codegen/tests/antlr4_rust_gen_cli/snapshots/antlr4_rust_gen_cli__testrig__lexer_syntax_error.snap
---
source: crates/antlr-rust-codegen/tests/antlr4_rust_gen_cli/testrig.rs
expression: "normalize_test_directory(utf8(&lexer_output.stderr), directory.path())"
---
Error: antlr4_rust_testrig::lexer

  × token recognition error at: '@'
   ╭─[<test-directory>/lexer-error.txt:1:1]
 1 │ @
   · ─
   ╰────

Error: antlr4_rust_testrig::parser

  × missing ID at '<EOF>'
   ╭─[<test-directory>/lexer-error.txt:2:1]
 1 │ @
   ╰────
