crates/antlr-rust-codegen/tests/antlr4_rust_gen_cli/snapshots/antlr4_rust_gen_cli__testrig__parser_runner_stdout.snap
---
source: crates/antlr-rust-codegen/tests/antlr4_rust_gen_cli/testrig.rs
expression: utf8(&valid_output.stdout)
---
[@0,0:4='hello',<1>,1:0]
[@1,6:5='<EOF>',<-1>,2:0]
(start hello <EOF>)
