crates/antlr-rust-codegen/tests/antlr4_rust_gen_cli/snapshots/antlr4_rust_gen_cli__testrig__parser_runner_trace.snap
---
source: crates/antlr-rust-codegen/tests/antlr4_rust_gen_cli/testrig.rs
expression: utf8(&valid_output.stderr)
---
enter   start, LT(1)=[@0,0:4='hello',<1>,1:0]
exit    start
