crates/antlr-rust-codegen/tests/antlr4_rust_gen_cli/snapshots/antlr4_rust_gen_cli__testrig__split_parser_tree.snap
---
source: crates/antlr-rust-codegen/tests/antlr4_rust_gen_cli/testrig.rs
expression: utf8(&output.stdout)
---
(start split <EOF>)
