crates/antlr-rust-codegen/tests/antlr4_rust_gen_cli/snapshots/antlr4_rust_gen_cli__testrig__unknown_start_rule_diagnostic.snap
---
source: crates/antlr-rust-codegen/tests/antlr4_rust_gen_cli/testrig.rs
expression: utf8(&rule_output.stderr)
---
Error: antlr4_rust_codegen::generation

  × test rig start rule `missing` was not found; available rules:
  │ TestRigParser.start
